--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
 @import '~bootstrap/dist/css/bootstrap-grid.css';
-
+html {
+    scroll-behavior: smooth;
+}
 html, body, #root {
     height: 100%;
     margin: 0;
